# blackboxai-1744217782133

./: README.md
escape-app/: .gitignore  README.md
escape-app/backend/: Cargo.toml
escape-app/backend/src/: main.rs
escape-app/backend/src/api/: mod.rs
escape-app/backend/src/networking/: domain_fronting.rs  mod.rs  obfuscation.rs  wireguard.rs
escape-app/backend/src/p2p/: mod.rs
escape-app/backend/src/security/: biometric.rs  mod.rs
escape-app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
escape-app/frontend/dist-electron/: main.js
escape-app/frontend/electron/: main.ts  preload.ts
escape-app/frontend/src/: App.jsx  App.tsx  electron.d.ts  index.jsx  index.tsx
escape-app/frontend/src/components/: BiometricUnlock.jsx  BiometricUnlock.tsx  SettingsPanel.jsx  SettingsPanel.tsx
escape-app/frontend/src/contexts/: SettingsContext.jsx  SettingsContext.tsx
escape-app/frontend/src/services/: wipeService.js  wipeService.ts
escape-app/frontend/src/utils/: secureStorage.js  secureStorage.ts
