[package]
name = "escape-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
wireguard = "0.1"
obfs4 = { git = "https://github.com/Pluggable-Transports/obfs4" }
ring = "0.16"
aes = "0.7"
chacha20 = "0.8"
libc = "0.2"
log = "0.4"
env_logger = "0.9"
libp2p = { version = "0.50", features = ["tcp-tokio", "dns", "ping", "noise", "yamux"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
aes-gcm = { version = "0.10", features = ["aes"] }
chacha20poly1305 = "0.10"
rand = "0.8"
zeroize = { version = "1.5", features = ["zeroize_derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.39", features = [
    "Security_Credentials_UI",
    "Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.6"
